@@ -7,3 +7,10 @@ Java 22 is required. To start, run this command:
 java --enable-preview -jar SeamCarving.jar image_path number_of_carves
 ```
 But first, change image_path and number_of_carves.
+
+# Example
+```
+java --enable-preview -jar SeamCarving.jar test_image.jpg 400
+```
+![test_image](https://github.com/badzianga/seam-carving/assets/89800669/198364c2-8d05-47bf-b1ad-999b5b356fb3)
+![output](https://github.com/badzianga/seam-carving/assets/89800669/556b071b-bd1e-4cfd-979e-7cdcd297ea23)
